--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,10 +13,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: Verify repository structure
-      run: ls -la  # Dosya yapısını kontrol eder
-
+      
     - name: Set up JDK 22
       uses: actions/setup-java@v4
       with:
@@ -24,8 +21,11 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml  # Root dizindeki pom.xml dosyanı kullanır
+    - name: Verify repository structure
+      run: ls -la  # ✅ Dosya yapısını kontrol eder
+
+    - name: Build and verify with Maven  # ✅ -DskipTests kullanmadan doğrulama yap
+      run: mvn -B verify --file pom.xml  
 
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
