--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,9 +23,9 @@ jobs:
 
     - name: Verify repository structure
       run: ls -la  # ✅ Dosya yapısını kontrol eder
-
-    - name: Build and verify with Maven  # ✅ -DskipTests kullanmadan doğrulama yap
-      run: mvn -B verify --file pom.xml  
+      
+    - name: Build with Maven (Skip Tests)
+      run: mvn -B package -DskipTests --file pom.xml
 
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
