--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      security-events: write  # ✅ Sadece gerekli izin verildi (dependency-graph için)
+      packages: read
+      security-events: write  # ✅ Dependency Graph için gerekli izin
 
     steps:
     - name: Checkout repository
