--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@
 *.zip
 *.tar.gz
 *.rar
-workspace.xml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -28,3 +27,4 @@ replay_pid*
 /pom.xml
 /.idea/
 /.mvn/
+/.idea/workspace.xml
